# panda-server

./: .gitignore  .pre-commit-config.yaml  ChangeLog.txt  Dockerfile  Dockerfile.base  INSTALL.md  INSTALL.txt  INSTALL_ATLAS.md  MANIFEST.in  PandaPkgInfo.py  README.md  README.txt  install_.txt  panda-server.spec  pyproject-source.toml  pyproject.toml  setup.cfg  setup.py  setup_mysql.cfg  setup_mysql.py  setup_mysqloraclemerge.cfg  setup_mysqloraclemerge.py  version.py  version_mysqloraclemerge.py
.github/workflows/: base-os-docker-publish.yml  base-platform-docker-publish.yml  code-check.yml  docker-publish.yml  jedi-docker-publish.yml  jedi-python-publish.yml  panda-server-docker-publish.yml  panda-server-python-publish.yml  pyright-check.yml  python-publish-source.yml  python-publish.yml  pythonpublish.yml  syntax-check.yml  unified-service-docker-publish.yml
DB update scripts/: retrial_tables.sql
bigpanda-client/: README.txt  prepare-client-tarball-from-bigpanda-server.sh
current/: INSTALL.txt  README.txt  setup.py
current/templates/: panda_server-add.sh.exe.template  panda_server-archivelog.sh.exe.template  panda_server-copyArchive.sh.exe.template  panda_server-copyROOT.sh.exe.template  panda_server-datasetManager.sh.exe.template  panda_server-deleteJobs.sh.exe.template  panda_server-httpd-FastCGI.conf.rpmnew.template  panda_server-httpd.conf.rpmnew.template  panda_server-logrotate.template  panda_server-makeSlsXml.exe.template  panda_server-merge.sh.exe.template  panda_server-sysconfig.rpmnew.template  panda_server.cfg.rpmnew.template
jedi/: Dockerfile  README.md  pyproject.toml
jedi/package/: hatch_build.py
jedi/templates/: conda_meta.yaml.template  panda_jedi.cfg.rpmnew.template  panda_jedi.cron.template
jedi/templates/sysconfig/: panda_jedi_env.template
package/: hatch_build.py  mm_communication.py  pyproject.toml
pandajedi/jedibrokerage/: AtlasAnalJobBroker.py  AtlasBrokerUtils.py  AtlasProdJobBroker.py  AtlasProdTaskBroker.py  GenJobBroker.py  JobBrokerBase.py  TaskBrokerBase.py
pandajedi/jediconfig/: jedi_config.py
pandajedi/jedicore/: FactoryBase.py  Interaction.py  JediDBProxy.py  JediDBProxyPool.py  JediDBSchemaInfo.py  JediException.py  JediTaskBuffer.py  JediTaskBufferInterface.py  MsgWrapper.py  ProcessUtils.py  SiteCandidate.py  ThreadUtils.py
pandajedi/jediddm/: AtlasDDMClient.py  DDMClientBase.py  DDMInterface.py  GenDDMClient.py
pandajedi/jedidog/: AsyncRequestWatchDog.py  AtlasAnalWatchDog.py  AtlasDataCarouselWatchDog.py  AtlasDataLocalityUpdaterWatchDog.py  AtlasProdWatchDog.py  AtlasQueueFillerWatchDog.py  AtlasTaskWithholderWatchDog.py  AtlasWorkflowManagerWatchDog.py  AtlasWorkflowProcessorWatchDog.py  GenWatchDog.py  JumboWatchDog.py  TypicalWatchDogBase.py  WatchDogBase.py
pandajedi/jediexec/: reniceJEDI.py
pandajedi/jedigen/: AtlasTaskGenerator.py  TaskGeneratorBase.py
pandajedi/jedimsgprocessor/: ai_parameter_adjuster_msg_processor  atlas_idds_msg_processor.py  base_msg_processor.py  forwarding_msg_processor.py  hpo_msg_processor.py  jedi_contents_feeder_msg_processor.py  jedi_job_generator_msg_processor.py  jedi_post_processor_msg_processor.py  kafka_msg_processor.py  panda_callback_msg_processor.py  panda_to_jedi_msg_processor.py  processing_msg_processor.py  status_report_msg_processor.py  tape_carousel_msg_processor.py  workflow_manager_msg_processor.py
pandajedi/jediorder/: ContentsFeeder.py  JediDaemon.py  JediKnight.py  JediMaster.py  JediMsgProcessor.py  JobBroker.py  JobGenerator.py  JobSplitter.py  JobThrottler.py  PostProcessor.py  TaskBroker.py  TaskCommando.py  TaskGenerator.py  TaskRefiner.py  TaskSetupper.py  WatchDog.py
pandajedi/jedipprocess/: AtlasAnalPostProcessor.py  AtlasPostProcessorUtils.py  AtlasProdPostProcessor.py  GenPostProcessor.py  MailTemplates.py  PostProcessorBase.py
pandajedi/jedirefine/: AtlasAnalTaskRefiner.py  AtlasProdTaskRefiner.py  GenTaskRefiner.py  RefinerUtils.py  TaskRefinerBase.py
pandajedi/jedisetup/: AtlasTaskSetupper.py  GenTaskSetupper.py  SimpleTaskSetupper.py  TaskSetupperBase.py
pandajedi/jeditest/: SchemaChecker.py  addContWoSoTask.py  addDataCarouselRequest.py  addEventServiceTask.py  addHpoTask.py  addIDDSStageInRequest.py  addNonAtlasTask.py  addNonAtlasTaskEnc.py  addTestTask.py  addTestTaskParamToDEFT.py  addTestTaskWithMerger.py  brokerTest.py  (+23 more)
server/: Dockerfile  README.md  pyproject.toml
server/package/: hatch_build.py
server/templates/: conda_meta.yaml.template
server/templates/init.d/: panda_httpd.exe.template
templates/: conda_meta.yaml.template  panda_jedi.cfg.rpmnew.template  panda_server-add.exe.template  panda_server-add.sh.exe.template  panda_server-add_main.exe.template  panda_server-add_sub.exe.template  panda_server-archivelog.exe.template  panda_server-archivelog.sh.exe.template  panda_server-backupJobArch.exe.template  panda_server-backupJobArch.sh.exe.template  panda_server-boostUser.exe.template  panda_server-boostUser.sh.exe.template  panda_server-callback.exe.template  panda_server-callback.sh.exe.template  panda_server-configurator.exe.template  panda_server-copyArchive.exe.template  panda_server-copyArchive.sh.exe.template  panda_server-copyROOT.exe.template  panda_server-copyROOT.sh.exe.template  panda_server-ctl.exe.template  panda_server-datasetManager.exe.template  panda_server-datasetManager.sh.exe.template  panda_server-deleteJobs.exe.template  panda_server-esPreemption.exe.template  panda_server-evpPD2P.exe.template  panda_server-evpPD2P.sh.exe.template  panda_server-frontier_retagging.exe.template  panda_server-grid-env.sh.template  panda_server-harvesterCtl.exe.template  panda_server-httpd-FastCGI.conf.rpmnew.template  panda_server-httpd-FastCGI.conf.template  panda_server-httpd.conf.rpmnew.template  panda_server-httpd.conf.template  panda_server-logrotate.template  panda_server-makeSlsXml.exe.template  panda_server-merge.exe.template  panda_server-merge.sh.exe.template  panda_server-network_configurator.exe.template  panda_server-pilot_streaming.exe.template  panda_server-pilot_streaming_legacy.exe.template  (+20 more)
(+542 files in other folders)
