[build-system]
requires = ["hatchling", "hatch-vcs", "requests"]
build-backend = "hatchling.build"


[project]
name = "panda-server"
dynamic = ["version"]
description = "PanDA Server Package"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "PanDA Team", email = "panda-support@cern.ch" },
]
dependencies = [
    'panda-common>=0.1.5',
    'panda-client-light>=1.5.55',
    'pyOpenSSL',
    'python-daemon',
    'mod_wsgi',
    'stomp.py',
    'pyyaml',
    'pyjwt',
    'polars',
    'requests',
    'psutil>=5.4.8',
    'idds-common',
    'idds-client',
    'idds-workflow>=1.1.0',
    'idds-doma',
    'idds-atlas',
    'ruamel.yaml',
    'cwl-utils>=0.13',
    'packaging',
    'snakemake==7.30.1',
    'numpy',
    'scipy',
    'werkzeug',
    'requests',
]
requires-python = ">=3.10"

[project.optional-dependencies]
oracle = ['oracledb']
mysql = ['mysqlclient']
postgres =  ['psycopg2-binary']
rucio = ['rucio-clients']
elasticsearch = ['elasticsearch']
atlasprod =  ['oracledb', 'rucio-clients', 'elasticsearch', 'numpy', 'scipy']
mcp = ['uvicorn', 'fastmcp']

[project.urls]
Homepage = "https://panda-wms.readthedocs.io/en/latest/"

[tool.hatch.version]
path = "../PandaPkgInfo.py"
pattern = "release_version = \"(?P<version>[^\"]+)\""

[tool.hatch.build]
directory = "dist"

[tool.hatch.build.targets.wheel]
exclude = ["*.template", "PandaPkgInfo.py", "hatch_build.py"]
packages = ["package"]

[tool.hatch.build.targets.wheel.force-include]
"../pandaserver" = "pandaserver"

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "etc/panda"
"templates/bin" = "usr/bin"
"templates/init.d" = "etc/rc.d/init.d"
"templates/systemd" = "etc/systemd/system"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "package/hatch_build.py"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    ".idea",
]
